crates/cribo/tests/snapshots/bundling_error@xfail_mixed_cycles.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
expression: error_msg
input_file: crates/cribo/tests/fixtures/bundling/xfail_mixed_cycles/main.py
---
Bundling failed as expected: Unresolvable circular dependencies detected:

Cycle 1: config_constants → constants_module
  Type: ModuleConstants
  Reason: Module-level constants create temporal paradox - consider moving to a shared configuration module
