crates/cribo/tests/snapshots/execution_results@alias_transformation_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/alias_transformation_test/main.py
---
ExecutionResults {
    status: Success,
    stdout: "JSON data: {\"test\": \"data\"}\nCurrent directory: /test/deterministic/81608cbb\nPATH environment: /Users/tino/.cargo/b...\nPython version: 3.12.11 (main, Jun  3 2025, 15:41:47) [Clang 17.0.0 (clang-1700.0.13.3)]\nProcessed and formatted: 2, 4, 6, 8, 10\nLoaded config: {'file': 'settings.json', 'loaded': True, 'settings': {'debug': False}}\nMath result: 4.0, Deterministic: 213\n[DEBUG] Helper result: Processed: TEST",
    stderr: "",
}
