crates/cribo/tests/snapshots/execution_results@ast_rewriting_happy_path.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/ast_rewriting_happy_path/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Welcome, Alice!\nUser: User(name='Alice', email='alice@example.com', role=admin)\nRole: admin\nDatabase: sqlite://test.db\nTotal: 60\nResult: {'user': 'Alice', 'email': 'alice@example.com', 'role': 'admin', 'total': 60, 'message': 'Welcome, Alice!'}",
    stderr: "",
}
