crates/cribo/tests/snapshots/execution_results@ast_rewriting_regular_import_aliases.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/ast_rewriting_regular_import_aliases/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Current working directory: /test/working/directory\nJSON string: {\"test\": \"value\"}\nPython version: sys.version_info(major=3, minor=13, micro=3, releaselevel='final', serial=0)\nABC module available: False\nParsed URL: example.com\nXML element tag: root\nHelper result: helper_result\nUtility value: test_value\nConfig debug: True\nPi value: 3.141592653589793\nRandom number: 82\nregular_import_aliases_test_complete",
    stderr: "",
}
